--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -38,7 +38,7 @@ jobs:
         echo $test_files
         echo "tests=$test_files" >> $GITHUB_OUTPUT
 
-  # A job to list the tests to be run
+  # A job to run the tests
   pytest:
     needs: identify-tests
     runs-on: self-hosted
