--- a/narps_open/utils/configuration/testing_config.toml
+++ b/narps_open/utils/configuration/testing_config.toml
@@ -13,6 +13,9 @@ test_runs = "run/"
 nb_procs = 8 # Maximum number of threads executed by the runner
 nb_trials = 3 # Maximum number of executions to have the pipeline executed completely
 
+[pipelines]
+remove_unused_data = true # set to true to activate remove nodes of pipelines
+
 [results]
 neurovault_naming = true # true if results files are saved using the neurovault naming, false if they use naming of narps
 
