[DOC] narps_open.core.common

--- a/.github/workflows/test_changes.yml
+++ b/.github/workflows/test_changes.yml
@@ -58,5 +58,5 @@ jobs:
     - name: Execute tests with pytest
       run: |
         if [[ "${{ needs.identify-tests.outputs.tests }}" != "" ]]; then
-          pytest -s -q ${{ needs.identify-tests.outputs.tests }}
+          pytest -s -q ${{ needs.identify-tests.outputs.tests }} -m "not pipeline_test"
         fi
