--- a/narps_open/utils/configuration/testing_config.toml
+++ b/narps_open/utils/configuration/testing_config.toml
@@ -3,11 +3,11 @@ title = "Testing configuration for the NARPS open pipelines project"
 config_type = "testing"
 
 [directories]
-dataset = "data/original/ds001734/"
-reproduced_results = "run/data/reproduced/"
-narps_results = "data/results/"
-test_data = "tests/test_data/"
-test_runs = "run/"
+dataset = "/work/data/original/ds001734/"
+reproduced_results = "/work/run/reproduced/"
+narps_results = "/work/data/results/"
+test_data = "/work/tests/test_data/"
+test_runs = "/work/run/"
 
 [runner]
 nb_procs = 8 # Maximum number of threads executed by the runner
